Compiler/tests/typing/bad/testfile-return-3.rs

fn f() -> i32 { true } fn main() {}
